<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="#FFFFFF"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/textPrompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:text="Create Quiz"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_gravity="start" />

    <Spinner
        android:id="@+id/listQuizType"
        android:layout_width="wrap_content"
        android:layout_height="49dp" />

    <Space
        android:layout_width="500dp"
        android:layout_height="15dp" />

    <TextView
        android:id="@+id/textQuestion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Question" />

    <EditText
        android:id="@+id/inputQuestion"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="Question"
        android:inputType="text"
        app:layout_gravity="fill" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="15dp" />

    <TextView
        android:id="@+id/textAnswer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Answer"
        app:layout_column="0"
        app:layout_gravity="start"
        app:layout_row="2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="470dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/inputChoice1"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="Answer"
                android:inputType="text"
                app:layout_gravity="fill" />

            <EditText
                android:id="@+id/inputChoice2"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="Choice 2"
                android:inputType="text"
                app:layout_gravity="fill" />

            <EditText
                android:id="@+id/inputChoice3"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="Choice 3"
                android:inputType="text"
                app:layout_gravity="fill" />

            <EditText
                android:id="@+id/inputChoice4"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="Choice 4"
                android:inputType="text"
                app:layout_gravity="fill" />

        </LinearLayout>

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:checkedButton="@id/radioButton1"
            android:weightSum="4">

            <RadioButton
                android:id="@+id/radioButton1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:visibility="gone" />

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:visibility="gone" />

            <RadioButton
                android:id="@+id/radioButton3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:visibility="gone" />

            <RadioButton
                android:id="@+id/radioButton4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:visibility="gone" />
        </RadioGroup>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Cancel"
            app:layout_gravity="start" />

        <Button
            android:id="@+id/createButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="Create" />
    </RelativeLayout>

</LinearLayout>