...
        android:layout_alignParentTop="true"
        android:layout_marginStart="500dp"
        android:layout_marginTop="200dp"
        android:text="@string/sort_by_course_code" />

    <Button
        android:id="@+id/favouriteSort"
        android:layout_width="260dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="500dp"
        android:layout_marginTop="250dp"
...
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="1110dp"
        android:layout_marginBottom="0dp"
        android:layout_toEndOf="@+id/classesButton"
        android:text="@string/calendar"
        android:textOff="@string/calendar"
        android:textOn="@string/calendar" />

    <ToggleButton
        android:id="@+id/classesButton"
...
        android:layout_marginTop="0dp"
        android:layout_marginBottom="137dp"
        android:baselineAligned="false"
        android:orientation="vertical">

        <ListView
            android:id="@+id/listCourses"
            android:layout_width="500dp"
            android:layout_height="721dp"
            android:layout_gravity="top"
            android:layout_weight="1"
            android:choiceMode="none"
            tools:ignore="InefficientWeight,Suspicious0dp" />
...
                android:inputType="text"
                android:text="@string/course_code"
                app:layout_column="0"
                app:layout_row="0" />

            <EditText
                android:id="@+id/codeOutput"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:ems="10"
                android:inputType="text"
                app:layout_column="1"
...
                android:text="@string/course_name"
                app:layout_column="0"
                app:layout_row="1"
                tools:ignore="Deprecated" />

            <EditText
                android:id="@+id/nameOutput"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:editable="false"
                android:ems="10"
                android:inputType="text"
...
                android:text="@string/date_ending"
                app:layout_column="0"
                app:layout_row="3"
                tools:ignore="Deprecated" />

            <EditText
                android:id="@+id/startOutput"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:ems="10"
                android:inputType="text"
                app:layout_column="1"
                app:layout_row="2" />

            <EditText
                android:id="@+id/endOutput"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:editable="false"
                android:ems="10"
                android:inputType="text"
...
                android:ems="10"
                android:text="@string/quiz_cards_created"
                app:layout_column="2"
                app:layout_row="2" />

            <EditText
                android:id="@+id/subjectOutput"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:ems="10"
                android:inputType="text"
                app:layout_column="3"
...
                android:enabled="false"
                android:src="@android:drawable/ic_menu_edit"
                app:layout_column="5"
                app:layout_row="1" />

            <ImageButton
                android:id="@+id/quizButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:src="@android:drawable/ic_menu_mapmode"
                app:layout_column="5"
                app:layout_row="2" />
...
        android:layout_alignParentTop="true"
        android:layout_marginStart="600dp"
        android:layout_marginTop="680dp"
        android:text="Term GPA" />

    <ImageButton
        android:id="@+id/addCourse"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="500dp"
        android:layout_marginTop="0dp"
...
