<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="comp3350.srsys.presentation.QuizListInfo">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar">

        <!-- Back button -->
        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="start"
            android:background="@android:color/transparent"
            android:padding="8dp"
            android:scaleType="fitCenter"
            android:src="@drawable/backarrow" />

        <ImageButton
            android:id="@+id/addButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="end"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            android:src="@drawable/add_icon" />

        <ImageButton
            android:id="@+id/deleteButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="end"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            android:src="@drawable/delete_icon" />

        <ImageButton
            android:id="@+id/editButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="end"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            android:src="@drawable/edit_icon" />

        <ImageButton
            android:id="@+id/playButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="end"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            android:src="@drawable/play_icon" />

        <TextView
            android:id="@+id/courseTitle"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textAlignment="center"
            android:textSize="30dp"
            android:text="TextView" />

    </androidx.appcompat.widget.Toolbar>

    <ListView
        android:id="@+id/listQuizzes"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:choiceMode="singleChoice"
        android:clipToPadding="true"/>

</RelativeLayout>